# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "robotiq_3f_common",
    srcs = ["robotiq_3f_common.cc"],
    hdrs = ["robotiq_3f_common.h"],
    deps = [
        "//lcmtypes:robotiq_3f",
        "//multibody/plant",
    ],
)

drake_cc_library(
    name = "robotiq_3f_lcm",
    srcs = ["robotiq_3f_lcm.cc"],
    hdrs = ["robotiq_3f_lcm.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":robotiq_3f_common",
        "//lcmtypes:robotiq_3f",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_binary(
    name = "run_robotiq_3f_constant_load_demo",
    srcs = ["run_robotiq_3f_constant_load_demo.cc"],
    data = [
        "//manipulation/models/robotiq_3f_description:models",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_robotiq_3f_constant_load_demo_URDF",
    srcs = ["run_robotiq_3f_constant_load_demo_URDF.cc"],
    data = [
        "//manipulation/models/robotiq_3f_description:models",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/rendering:pose_bundle_to_draw_message",
        "@gflags",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "robotiq_3f_lcm_test",
    deps = [
        ":robotiq_3f_common",
        ":robotiq_3f_lcm",
        "//attic/manipulation/util:world_sim_tree_builder",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/framework",
    ],
)

add_lint_tests()
